--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="primary_blue">#422A72</color>
     <color name="light_blue">#9785BB</color>
     <color name="inactive_icon_color">#AB9785BB</color>
+
+    <color name="child_tabs_inactive">#E8EBFA</color>
+    <color name="child_tabs_active">#B0C2F6</color>
 </resources>
