--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -32,7 +32,7 @@
         android:textSize="15sp" />
 
     <Button
-        android:id="@+id/registerButton"
+        android:id="@+id/register_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/textView"
@@ -54,11 +54,23 @@
         android:textColor="@color/white"
         android:textSize="18sp" />
 
+    <ProgressBar
+        android:id="@+id/get_started_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="35dp"
+        android:layout_above="@id/textView"
+        android:foregroundGravity="center"
+        android:indeterminateTint="@color/primary_blue"
+        android:visibility="visible" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/goToLoginPageButton"
+        android:layout_above="@id/go_to_login_page_button"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:fontFamily="@font/worksans_medium"
@@ -67,7 +79,7 @@
         android:textColor="#062132" />
 
     <Button
-        android:id="@+id/goToLoginPageButton"
+        android:id="@+id/go_to_login_page_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -88,17 +100,5 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="18sp" />
-
-    <ProgressBar
-        android:id="@+id/loadingProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="35dp"
-        android:foregroundGravity="center"
-        android:indeterminateTint="@color/primary_blue"
-        android:visibility="gone" />
 
 </RelativeLayout>
