--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/emailId"
+            android:id="@+id/email_id_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -53,7 +53,7 @@
             android:textColorHint="@color/light_blue" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/password_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -70,7 +70,7 @@
             android:textColorHint="@color/light_blue" />
 
         <TextView
-            android:id="@+id/forgotPassword"
+            android:id="@+id/forgot_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
@@ -80,7 +80,7 @@
             android:textColor="@color/primary_blue" />
 
         <Button
-            android:id="@+id/loginButton"
+            android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -95,6 +95,14 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18sp" />
+
+        <ProgressBar
+            android:id="@+id/login_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:foregroundGravity="center"
+            android:indeterminateTint="@color/primary_blue"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/textView"
@@ -121,7 +129,7 @@
             android:textColor="@color/light_blue" />
 
         <TextView
-            android:id="@+id/goToRegister"
+            android:id="@+id/go_to_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/worksans_bold"
