--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -9,7 +9,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/save_changes_button"
+        android:layout_above="@+id/edit_profile_save_changes_button"
         android:layout_alignParentTop="true">
 
         <RelativeLayout
@@ -31,7 +31,7 @@
                 android:text="Upload Profile Image"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="15sp" />
+                android:textSize="16sp" />
 
             <ImageView
                 android:id="@+id/upload_icon"
@@ -40,7 +40,7 @@
                 android:layout_alignTop="@+id/upload_profile_image_button"
                 android:layout_alignBottom="@id/upload_profile_image_button"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="20dp"
                 android:src="@drawable/ic_upload" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -55,7 +55,7 @@
                 android:textColorHint="@color/light_blue"
                 app:hintTextColor="@color/primary_blue"
                 app:startIconDrawable="@drawable/ic_profile"
-                app:startIconTint="@color/light_blue">
+                app:startIconTint="@color/primary_blue">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edit_profile_user_name_edit_text"
@@ -79,7 +79,7 @@
                 android:textColorHint="@color/light_blue"
                 app:hintTextColor="@color/primary_blue"
                 app:startIconDrawable="@drawable/ic_mobile"
-                app:startIconTint="@color/light_blue">
+                app:startIconTint="@color/primary_blue">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edit_profile_mobile_number_edit_text"
@@ -106,7 +106,7 @@
                 app:endIconTint="@color/light_blue"
                 app:hintTextColor="@color/primary_blue"
                 app:startIconDrawable="@drawable/ic_password"
-                app:startIconTint="@color/light_blue">
+                app:startIconTint="@color/primary_blue">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edit_profile_password_edit_text"
