Cart Items introduced!

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainFragments.CartFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/progress_steps"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="CART" />
+        android:layout_alignParentTop="true"
+        android:listSelector="@color/transparent" />
 
-</FrameLayout>
+    <RelativeLayout
+        android:id="@+id/cart_child_fragments_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/progress_steps"
+        android:layout_alignParentBottom="true" />
+
+</RelativeLayout>
