--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,8 @@
                 android:layout_height="wrap_content"
                 android:autofillHints="emailAddress"
                 android:fontFamily="@font/worksans_regular"
+                android:imeOptions="actionNext"
+                android:maxLines="1"
                 android:padding="12dp"
                 android:textColorLink="@color/primary_blue" />
 
@@ -80,6 +82,8 @@
                 android:layout_height="wrap_content"
                 android:autofillHints="password"
                 android:fontFamily="@font/worksans_regular"
+                android:imeOptions="actionDone"
+                android:maxLines="1"
                 android:padding="12dp"
                 android:textColorLink="@color/primary_blue" />
 
