--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -38,10 +38,15 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
+            android:autofillHints="username"
             android:fontFamily="@font/worksans_regular"
             android:gravity="center"
             android:hint="username"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:maxLines="1"
             android:minHeight="48dp"
+            android:scrollHorizontally="true"
             android:textColorHint="@color/light_blue"
             android:textSize="18sp" />
 
@@ -97,12 +102,16 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:autofillHints="phone"
             android:fontFamily="@font/worksans_regular"
             android:gravity="center"
             android:hint="Mobile Number"
+            android:imeOptions="actionGo"
             android:inputType="phone"
             android:maxLength="10"
+            android:maxLines="1"
             android:minHeight="48dp"
+            android:scrollHorizontally="true"
             android:textSize="18sp" />
 
         <FrameLayout
@@ -185,11 +194,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:autofillHints="otp"
             android:fontFamily="@font/worksans_medium"
             android:gravity="center"
             android:inputType="number"
             android:letterSpacing="1"
             android:maxLength="6"
+            android:maxLines="1"
+            android:scrollHorizontally="true"
             android:textColor="#062132"
             android:textSize="25sp" />
 
