--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/home_email_id_layout"
+            android:id="@+id/home_search_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -27,13 +27,16 @@
             app:startIconTint="#987ECB">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/email_id_edit_text"
+                android:id="@+id/home_search_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autofillHints="emailAddress"
                 android:background="@drawable/search_background"
                 android:fontFamily="@font/worksans_regular"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
+                android:maxLines="1"
                 android:padding="12dp"
+                android:scrollHorizontally="true"
                 android:textColorLink="@color/primary_blue" />
 
         </com.google.android.material.textfield.TextInputLayout>
