Progress Steps Modified!

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -6,16 +6,10 @@
     android:orientation="vertical"
     tools:context=".MainFragments.CartFragment">
 
-<!--    <ListView-->
-<!--        android:id="@+id/progress_steps"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:listSelector="@color/transparent" />-->
-
-    <com.anton46.stepsview.StepsView
-        android:id="@+id/progress_steps"
+    <com.baoyachi.stepview.HorizontalStepView
+        android:id="@+id/order_progress_steps"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <RelativeLayout
         android:id="@+id/cart_child_fragments_container"
